2014-12-28  Alan Modra  <amodra@gmail.com>

	PR 17766
	* pei-x86_64.c (pex64_bfd_print_pdata_section): Correct string
	length.  Use memcpy rather than strcpy.

2014-12-26  Alan Modra  <amodra@gmail.com>

	PR 17755
	* elf64-sh64.c (sh_elf64_copy_private_data_internal): Delete code
	copying SHF_SH5_ISA32.

2014-12-25  Thomas Preud'homme  <thomas.preudhomme@arm.com>

	* elf32-arm.c (elf32_arm_merge_eabi_attributes): Handle new
	Tag_ABI_VFP_args value and replace hardcoded values by enum values.
	(elf32_arm_post_process_headers): Set e_flags in ELF header as hard
	float only when Tag_ABI_VFP_args is 1, using new enum value
	AEABI_VFP_args_vfp to check that.

2014-12-24  H.J. Lu  <hongjiu.lu@intel.com>

	* pei-x86_64.c (pex64_bfd_print_pdata_section): Add cast to
	unsigned long.

2014-12-24  Pierre Muller  <muller@sourceware.org>

	Add support for pdata output for pe coff objects.
	* pe-x86_64.c (pex64_bfd_print_pdata): Add external
	declaration.
	(bfd_pe_print_data): Set macro to pex64_bfd_print_data.
	* pei-x86_64.c (pex64_bfd_print_pdata): Changed to
	global function. Now handles multiple .pdata sections.
	(pex_bfd_print_pdata_section): New static helper function,
	using most of old pex_bfd_print_pdata function code, but adding
	support for coff pe objects, which might have some fields
	starting at zero offset.
	(pex64_print_all_pdata_sections) : New static helper function,
	used in call to bfd_map_over_sections inside new
	pex66_bfd_print_pdata function.
	(bfd_boolean pdata_count): New static variable, used to return
	bfd_boolean value for pex64_bfd_print_pdata function.

2014-12-24  Alan Modra  <amodra@gmail.com>

	* linker.c (_bfd_generic_link_output_symbols): Remove BSF_WEAK
	flag from bfd_link_hash_defined symbols.

2014-12-23  Andrew Burgess  <andrew.burgess@embecosm.com>

	* elf32-avr.c (bfd_elf_avr_final_write_processing): Don't set
	EF_AVR_LINKRELAX_PREPARED unconditionally.

2014-12-23  Alan Modra  <amodra@gmail.com>
