@@ -1,0 +1,4 @@
+ .text
+ .global _start
+_start:
+ .long 0
